--- a/omts-login-ms/src/main/resources/application.properties
+++ b/omts-login-ms/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=omts-login-ms
 
 server.port=8000
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=system
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
