--- a/omts-login-ms/src/main/resources/application.properties
+++ b/omts-login-ms/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8000
 
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=system
-spring.datasource.password=password
+spring.datasource.password=praveen99
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
