--- a/omts-login-ms/pom.xml
+++ b/omts-login-ms/pom.xml
@@ -55,6 +55,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-zuul -->
+<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+    <version>2.2.3.RELEASE</version>
+</dependency>
 	</dependencies>
 
 	<build>
