--- a/omts-movie-ms/src/main/resources/application.properties
+++ b/omts-movie-ms/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=sindhu375
 
 # Hibernate Configuration
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 spring.jackson.serialization.fail-on-empty-beans=false
