--- a/omts-login-ms/pom.xml
+++ b/omts-login-ms/pom.xml
@@ -61,6 +61,12 @@
     <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
     <version>2.2.3.RELEASE</version>
 </dependency>
+
+<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    <version>2.2.3.RELEASE</version>
+</dependency>
 	</dependencies>
 
 	<build>
