--- a/omts-login-ms/src/main/resources/application.properties
+++ b/omts-login-ms/src/main/resources/application.properties
@@ -1,11 +1,5 @@
-spring.application.name=omts-login-ms
-
-server.port=8000
-
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=system
-spring.datasource.password=praveen99
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+zuul.ignored-headers=Access-Control-Allow-Origin
+zuul.host.socket-timeout-millis=20000
+zuul.host.connect-timeout-millis=20000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=10000
