--- a/omts-user-ms/src/main/resources/application.properties
+++ b/omts-user-ms/src/main/resources/application.properties
@@ -5,10 +5,10 @@ server.port=8100
 # Datasource Configuration
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=system
-spring.datasource.password=praveen99
+spring.datasource.password=${password:praveen99}
 
 # Hibernate Configuration
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
