--- a/omts-movie-ms/pom.xml
+++ b/omts-movie-ms/pom.xml
@@ -26,7 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		
+		<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    <version>2.2.3.RELEASE</version>
+</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
