--- a/omts-movie-ms/src/main/resources/application.properties
+++ b/omts-movie-ms/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8199
 
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=system
-spring.datasource.password=sindhu375
+spring.datasource.password=${password:sindhu375}
 
 # Hibernate Configuration
 spring.jpa.show-sql=true
