--- a/omts-booking-ms/pom.xml
+++ b/omts-booking-ms/pom.xml
@@ -39,6 +39,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+    		<groupId>javax.validation</groupId>
+    		<artifactId>validation-api</artifactId>
+    		<version>2.0.0.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
 			<scope>runtime</scope>
