--- a/omts-booking-ms/src/main/resources/application.properties
+++ b/omts-booking-ms/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+spring.application.name=booking-ms
+spring.datasource.username=system
+spring.datasource.password=password
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.datasource.platform=org.hibernate.dialect.Oracle10gDialect
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
+#eureka.client.register-with-eureka=false
+#
+#eureka.client.fetch-registry=false
+
