--- a/omts-movie-ms/pom.xml
+++ b/omts-movie-ms/pom.xml
@@ -31,6 +31,7 @@
     <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     <version>2.2.3.RELEASE</version>
 </dependency>
+
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -40,7 +41,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+<dependency>
+	<groupId>org.sonarsource.scanner.maven</groupId>
+  		<artifactId>sonar-maven-plugin</artifactId>
+    	<version>3.6.0.1398</version>
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
