--- a/omts-booking-ms/src/main/resources/application.properties
+++ b/omts-booking-ms/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.application.name=booking-ms
 spring.datasource.username=system
 spring.datasource.password=password
@@ -11,7 +10,5 @@ spring.datasource.platform=org.hibernate.dialect.Oracle10gDialect
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
-#eureka.client.register-with-eureka=false
-#
-#eureka.client.fetch-registry=false
 
+server.port=8888
