--- a/omts-login-ms/pom.xml
+++ b/omts-login-ms/pom.xml
@@ -36,6 +36,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+	<groupId>org.sonarsource.scanner.maven</groupId>
+  		<artifactId>sonar-maven-plugin</artifactId>
+    	<version>3.6.0.1398</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
