commit by praveen

--- a/omts-booking-ms/src/main/resources/application.properties
+++ b/omts-booking-ms/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=booking-ms
-spring.datasource.username=system
-spring.datasource.password=password
+
+server.port=8888
+
 
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+
+spring.datasource.username=system
+spring.datasource.password=${password:praveen99}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -11,4 +16,3 @@ spring.datasource.platform=org.hibernate.dialect.Oracle10gDialect
 spring.jackson.serialization.fail-on-empty-beans=false
 
 
-server.port=8888
