--- a/omts-seat-ms/src/main/resources/application.properties
+++ b/omts-seat-ms/src/main/resources/application.properties
@@ -1,13 +1,18 @@
-server.port=8000
+server.port=8200
 spring.application.name=seat.ms
 
 spring.datasources-driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
-spring.datasource.username=scott
-spring.datasource.password=tiger
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/${orcl:xe}
+spring.datasource.username=${system:system}
+spring.datasource.password=${password:praveen99}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
+
+
+
+
+#spring.jpa.hibernate.ddl-auto=create
 
