--- a/otms-theatre-ms/src/main/resources/application.properties
+++ b/otms-theatre-ms/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8686
 #JPA Connection details
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:${db_instance:orcl}
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:${db_instance:xe}
 spring.datasource.username=${db_user:system}
-spring.datasource.password=${db_password:system}
+spring.datasource.password=${db_password:praveen99}
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
